# waymux

./: .SRCINFO  .gitignore  CLAUDE.md  LICENSE  PKGBUILD  README.md  background_dialog.c  background_dialog.h  config.h.in  control.c  control.h  desktop_entry.c  desktop_entry.h  example-profile.toml  idle_inhibit_v1.c  keybinding.c  keybinding.h  launcher.c  launcher.h  meson.build  meson_options.txt  output.c  pixel_buffer.c  pixel_buffer.h  profile.c  profile.h  profile_selector.c  profile_selector.h  registry.c  registry.h  seat.c  server.h  tab.c  tab.h  tab_bar.c  tab_bar.h  test-profile.toml  test_profile_parse.c  view.c  view.h  (+11 more)
.github/workflows/: release.yml
test/: README.md  control_test.c  control_test_stubs.c  desktop_entry_test.c  keybinding_test.c  profile_test.c  tab_test.c  tab_test_stubs.c  waymux_config_test.c  waymuxctl_test.c
